# libbfio

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libbfio-wiki.ini  libbfio.ini  libbfio.pc.in  libbfio.spec.in  runtests.sh  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build.yml  build_linux.yml
.travis/: runtests.sh  script.sh
borland/: Makefile.am
borland/codegear/: libbfio.groupproj
borland/codegear/liberror/: liberror.cbproj
borlandc/: Makefile.am
borlandc/codegear/: libbfio.groupproj
borlandc/codegear/bfioexport/: unaexport.cbproj
borlandc/codegear/libbfio/: libbfio.cbproj
borlandc/codegear/libcerror/: libcerror.cbproj
borlandc/codegear/libcfile/: libcfile.cbproj
borlandc/codegear/libclocale/: libclocale.cbproj
borlandc/codegear/libcpath/: libcpath.cbproj
borlandc/codegear/libcstring/: libcstring.cbproj
borlandc/codegear/liberror/: liberror.cbproj
borlandc/codegear/libsystem/: libsystem.cbproj
borlandc/codegear/libuna/: libuna.cbproj
cmake/: CMakeLists.txt
common/: byte_stream.h  common.h  config.h.in  config_borlandc.h  config_msc.h  config_winapi.h  config_windows.h  endian.h  memory.h  narrow_string.h  types.h.in  wide_string.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
examples/: Makefile.am
examples/libbfio/: open_close.c
include/: Makefile.am  libbfio.h.in
include/libbfio/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libbfio/: Makefile.am  libbfio.c  libbfio.rc.in  libbfio_codepage.h  libbfio_definitions.h.in  libbfio_error.c  libbfio_error.h  libbfio_error_string.c  libbfio_error_string.h  libbfio_extern.h  libbfio_file.c  libbfio_file.h  libbfio_file_io.c  libbfio_file_io.h  libbfio_file_io_handle.c  libbfio_file_io_handle.h  libbfio_file_pool.c  libbfio_file_pool.h  libbfio_file_range.c  libbfio_file_range.h  libbfio_file_range_io_handle.c  libbfio_file_range_io_handle.h  libbfio_handle.c  libbfio_handle.h  libbfio_legacy.c  libbfio_legacy.h  libbfio_libcdata.h  libbfio_libcerror.h  libbfio_libcfile.h  libbfio_libclocale.h  libbfio_libcpath.h  libbfio_libcstring.h  libbfio_libcthreads.h  libbfio_libuna.h  libbfio_list_type.c  libbfio_list_type.h  libbfio_memory_range.c  libbfio_memory_range.h  libbfio_memory_range_io_handle.c  libbfio_memory_range_io_handle.h  (+20 more)
m4/: libcdata.m4  libcpath.m4
macosx/: Introduction.rtf.in  Makefile.am  Readme.rtf  libbfio.pmproj
macosx/libbfio.pmdoc/: 01include.xml  01include.xml.in  02lib.xml  02lib.xml.in  03share.xml  03share.xml.in  index.xml  index.xml.in
manuals/: Makefile.am  libbfio.3
msvscpp/: Makefile.am  libbfio.sln
msvscpp/bfio_test_error/: bfio_test_error.vcproj
msvscpp/bfio_test_file/: bfio_test_file.vcproj
msvscpp/bfio_test_file_io_handle/: bfio_test_file_io_handle.vcproj
msvscpp/bfio_test_file_pool/: bfio_test_file_pool.vcproj
msvscpp/bfio_test_file_range/: bfio_test_file_range.vcproj
msvscpp/bfio_test_file_range_io_handle/: bfio_test_file_range_io_handle.vcproj
msvscpp/bfio_test_get_version/: bfio_test_get_version.vcproj
msvscpp/bfio_test_handle/: bfio_test_handle.vcproj
msvscpp/bfio_test_handle_read/: bfio_test_handle_read.vcproj
msvscpp/bfio_test_handle_seek/: bfio_test_handle_seek.vcproj
msvscpp/bfio_test_handle_write/: bfio_test_handle_write.vcproj
msvscpp/bfio_test_memory_range/: bfio_test_memory_range.vcproj
msvscpp/bfio_test_memory_range_io_handle/: bfio_test_memory_range_io_handle.vcproj
msvscpp/bfio_test_path/: bfio_test_path.vcproj
msvscpp/bfio_test_pool/: bfio_test_pool.vcproj
msvscpp/bfio_test_pool_read/: bfio_test_pool_read.vcproj
msvscpp/bfio_test_pool_seek/: bfio_test_pool_seek.vcproj
msvscpp/bfio_test_pool_write/: bfio_test_pool_write.vcproj
msvscpp/bfio_test_support/: bfio_test_support.vcproj
msvscpp/bfio_test_system_string/: bfio_test_system_string.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libbfio_dll/: libbfio_dll.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/liberror/: liberror.vcproj
msvscpp/libuna/: libuna.vcproj
po/: ChangeLog
tests/: Makefile.am  bfio_test_error.c  bfio_test_extern.h  bfio_test_file.c  bfio_test_file_io_handle.c  bfio_test_file_pool.c  bfio_test_file_range.c  bfio_test_file_range_io_handle.c  bfio_test_functions.c  bfio_test_functions.h  bfio_test_get_version.c  bfio_test_getopt.c  bfio_test_getopt.h  bfio_test_handle.c  bfio_test_handle_read.c  bfio_test_handle_seek.c  bfio_test_handle_write.c  bfio_test_libbfio.h  bfio_test_libcdata.h  bfio_test_libcerror.h  bfio_test_libcfile.h  bfio_test_libclocale.h  bfio_test_libcnotify.h  bfio_test_libcpath.h  bfio_test_libcstring.h  bfio_test_libuna.h  bfio_test_macros.h  bfio_test_memory.c  bfio_test_memory.h  bfio_test_memory_range.c  bfio_test_memory_range_io_handle.c  bfio_test_path.c  bfio_test_pool.c  bfio_test_pool_read.c  bfio_test_pool_seek.c  bfio_test_pool_write.c  bfio_test_read  bfio_test_read.c  bfio_test_rwlock.c  bfio_test_rwlock.h  (+28 more)
