CODEGEAR_FILES = \
	codegear/libcstring/libcstring.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libbfio/libbfio.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libbfio.groupproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

