CODEGEAR_FILES = \
	codegear/libbfio/libbfio.cbproj \
	codegear/libcerror/libcerror.cbproj \
	codegear/libcfile/libcfile.cbproj \
	codegear/libclocale/libclocale.cbproj \
	codegear/libcpath/libcpath.cbproj \
	codegear/libcstring/libcstring.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libbfio.groupproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

