include_HEADERS = \
	libbfio.h

pkginclude_HEADERS = \
	libbfio/codepage.h \
	libbfio/definitions.h \
	libbfio/error.h \
	libbfio/extern.h \
	libbfio/features.h \
	libbfio/types.h

EXTRA_DIST = \
	libbfio.h.in \
	libbfio/definitions.h.in \
	libbfio/features.h.in \
	libbfio/types.h.in

DISTCLEANFILES = \
	libbfio.h \
	libbfio/definitions.h \
	libbfio/features.h \
	libbfio/types.h \
	Makefile \
	Makefile.in

