EXTRA_DIST = \
	libbfio.pmdoc/01include.xml.in \
	libbfio.pmdoc/01include-contents.xml \
	libbfio.pmdoc/02lib.xml.in \
	libbfio.pmdoc/02lib-contents.xml \
	libbfio.pmdoc/03share.xml.in \
	libbfio.pmdoc/03share-contents.xml \
	libbfio.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libbfio.pmdoc/01include.xml
	/bin/rm -f libbfio.pmdoc/02lib.xml
	/bin/rm -f libbfio.pmdoc/03share.xml
	/bin/rm -f libbfio.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

