MSVSCPP_FILES = \
	bfio_test_error/bfio_test_error.vcproj \
	bfio_test_handle/bfio_test_handle.vcproj \
	bfio_test_handle_read/bfio_test_handle_read.vcproj \
	bfio_test_handle_seek/bfio_test_handle_seek.vcproj \
	bfio_test_handle_write/bfio_test_handle_write.vcproj \
	bfio_test_pool/bfio_test_pool.vcproj \
	bfio_test_pool_read/bfio_test_pool_read.vcproj \
	bfio_test_pool_seek/bfio_test_pool_seek.vcproj \
	bfio_test_pool_write/bfio_test_pool_write.vcproj \
	bfio_test_support/bfio_test_support.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libuna/libuna.vcproj \
	libbfio.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

