MSVSCPP_FILES = \
	bfio_test_error/bfio_test_error.vcproj \
	bfio_test_file/bfio_test_file.vcproj \
	bfio_test_file_io_handle/bfio_test_file_io_handle.vcproj \
	bfio_test_file_pool/bfio_test_file_pool.vcproj \
	bfio_test_file_range/bfio_test_file_range.vcproj \
	bfio_test_file_range_io_handle/bfio_test_file_range_io_handle.vcproj \
	bfio_test_handle/bfio_test_handle.vcproj \
	bfio_test_memory_range/bfio_test_memory_range.vcproj \
	bfio_test_memory_range_io_handle/bfio_test_memory_range_io_handle.vcproj \
	bfio_test_pool/bfio_test_pool.vcproj \
	bfio_test_support/bfio_test_support.vcproj \
	bfio_test_system_string/bfio_test_system_string.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libuna/libuna.vcproj \
	libbfio.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

